--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,10 @@ body {
     top: 0; /* Asegura que esté en la parte superior */
     width: 100%; /* Para que ocupe todo el ancho */
     z-index: 1000; /* Asegura que esté sobre otros elementos */
-    
-}
-
-/* Estilos para la lista */
-.nav-list {
+  }
+  
+  /* Estilos para la lista */
+  .nav-list {
     list-style-type: none; /* Elimina los puntos de la lista */
     display: grid; /* Usa CSS Grid para organizar los botones */
     grid-template-columns: repeat(3, auto); /* Tres columnas para los botones */
@@ -37,6 +36,7 @@ body {
     background: #155da1; /* Color de fondo para el área de botones */
     padding: 10px; /* Espaciado interno */
     border-radius: 35px; /* Bordes redondeados */
+    box-shadow: 3px 3px 70px rgb(248, 247, 247);
 }
 
 /* Estilos para los botones */
